Added citation link with SAS URL

--- a/.env.sample
+++ b/.env.sample
@@ -31,3 +31,4 @@ AZURE_COSMOSDB_ACCOUNT=
 AZURE_COSMOSDB_DATABASE=
 AZURE_COSMOSDB_CONVERSATIONS_CONTAINER=
 AZURE_COSMOSDB_ACCOUNT_KEY=
+AZURE_STORAGE_ACCOUNT_KEY=
