--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -8,5 +8,5 @@ langchain==0.0.340
 bs4==0.0.1
 urllib3==2.0.6
 pytest==7.4.0
-azure-storage-blob
-chardet
+azure-storage-blob==12.17.0
+chardet=3.0.4
