--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
 azure-identity==1.14.0
 
 Flask==2.3.2
-openai==0.27.7
+openai==1.30.1
 azure-search-documents==11.4.0b6
 azure-storage-blob==12.17.0
 python-dotenv==1.0.0
 azure-cosmos==4.5.0
 azure.monitor.opentelemetry==1.1.1
+openmeteo_requests==1.1.0
+requests-cache==1.1.1
+retry-requests==2.0.0
+pyyaml==6.0.1
+tiktoken==0.4.0
